tests/e2e/chainsaw/05-modules/gateway/resources/gateway.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  stack: chainsaw-gateway
  dev: true
  ingress:
    host: gateway.chainsaw.local
    hosts:
      - api.chainsaw.local
      - extra.chainsaw.local
    scheme: https
    annotations:
      spec-annotation: "yes"
