tests/e2e/chainsaw/05-modules/gateway/resources/settings-updated-hosts.yaml
apiVersion: formance.com/v1beta1
kind: Settings
metadata:
  name: chainsaw-gateway-ingress-hosts
spec:
  stacks:
    - chainsaw-gateway
  key: gateway.ingress.hosts
  value: "updated.{stack}.settings.local, api-updated.chainsaw.local"
