tests/e2e/chainsaw/05-modules/gateway/resources/stack.yaml
apiVersion: formance.com/v1beta1
kind: Stack
metadata:
  name: chainsaw-gateway
spec:
  version: v0.0.0-e2e
